Fix centering of main content when scrollbar appears

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,13 +2,16 @@
 //
 // Styles for managing the structural hierarchy of the site.
 
-body {
-  max-width: 800px;
-  padding: 0 30px;
-  margin: 30px auto;
+html {
+  padding: 30px;
   // This prevents the scrollbar from shifting the centered body to the left by adding padding equal
   // to the scrollbar's width (100% of the total screen width - 100% of the available screen width).
   padding-left: calc(30px + 100vw - 100%);
+}
+
+body {
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 header {
